# amlMultidrugResistance

./: .gitignore  README.md  beataml_pilot_bvsw_hilic_metabolites.xlsx  beataml_pilot_bvsw_rp_metabolites.xlsx  fig0_supp_info_combine_proteomics.ipynb
BeatAMLPilot_Integration/: bap_metab_integration.R
NRAS/: 2025-01-20_v2_MonoSigComparison_cellFrac.R  4-panSEA_global,phospho.R  4-panSEA_global,phospho_20250204.R  4-panSEA_global,phospho_20250523.R  5-panSEA_global,phospho.R  README.md  customPCA.R
NRAS_ASO_proteomics/: 2025-01-20_v2_MonoSigComparison_cellFrac.R  installDependencies.R
aml_outcome_disparities/: README.md
cd14_cd34_proteomics/: 2025-01-20_v2_MonoSigComparison_cellFrac.R  241202_diffexp_limma.R  5-panSEA_global,phospho_20250703.R  README.md  corrWithBulkAUC.R  figS1.R  figures_2025-01-20.R
clinical samples/: 00_sampleMetdata.Rmd
data/: align_samples.ipynb
decGiltResistance/: 0_combine_proteomics.ipynb  1_calcDiffExProteinsPhospho.R  2_diffExAnalysis.Rmd  2_prep_diff_exp_for_magine.ipynb  3_drugTarget.Rmd  3_run_enrichment.ipynb  4_altTargetSuggestions.Rmd  4_explore_enrichment_analysis.ipynb  5_plot_protein_lists.ipynb  (+1 more)
pilot/: build_diablo_ksea.py  ksea_setup.py  prep_diablo_datasets.py  pyproject.toml
pilot/pilot/: data_import.py  figure_setup.py  gene_analysis.py  utils.py
pilot/pilot/figures/: cdk4_rb1.py  cell_type_deconv.py  compare_batches.py  diablo_enrichment.py  diablo_loadings_heatmap.py  diablo_scores_plot.py  lcp1_effects.py  lcp1s_inflammatory.py  metabolites_heatmap.py  phospho_targets.py  volcano_plots.py
(+158 files in other folders)
