[project]
name = "pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "datashader>=0.18.2",
    "gseapy>=1.1.9",
    "igraph>=0.11.9",
    "inmoose>=0.8.1",
    "isort>=6.0.1",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.5",
    "mygene>=3.2.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "synapseclient>=4.9.0",
]
